[client] Avoid wrapping column titles

--- a/client/static/css/hatohol.css
+++ b/client/static/css/hatohol.css
@@ -79,6 +79,11 @@ div#noscript-background div#noscript-notice
   font-weight: bold;
 }
 
+#main th
+{
+  white-space: nowrap;
+}
+
 /* graph */
 .graph h2 {
     text-align: center;
